Fix images visibility change path

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,8 +15,8 @@ $color-alice-blue: #F0F4FC;
 
 $shadow-black25: 0 4px 4px $color-black25;
 
-$url-background-327: url("src/assets/images/jpg/background-327.jpg");
-$url-background-684: url("src/assets/images/jpg/background-684.jpg");
-$url-background-720: url("src/assets/images/jpg/background-720.jpg");
-$url-background-910: url("src/assets/images/jpg/background-910.jpg");
-$url-arrow: url('src/assets/images/svg/icon__arrow.svg');
+$url-background-327: url("./images/jpg/background-327.jpg");
+$url-background-684: url("./images/jpg/background-684.jpg");
+$url-background-720: url("./images/jpg/background-720.jpg");
+$url-background-910: url("./images/jpg/background-910.jpg");
+$url-arrow: url('./images/svg/icon__arrow.svg');
